Added Lotto, Misc Bugfixes